design: new image, adaptive design, fix dark mode

--- a/src/custom-components/ui/MainPageBlocks/@introduction/style.scss
+++ b/src/custom-components/ui/MainPageBlocks/@introduction/style.scss
@@ -58,11 +58,11 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(0deg,
-          transparentize(#070707, 0),
-          transparentize(#070707, 0.2),
-          transparentize(#070707, 0.4),
-          transparentize(#070707, 0.6),
-          transparentize(#070707, 0.8),
+          transparentize(#000, 0),
+          transparentize(#000, 0.2),
+          transparentize(#000, 0.4),
+          transparentize(#000, 0.6),
+          transparentize(#000, 0.8),
   );
 
   z-index: 100;
