--- a/src/custom-components/ui/MainPageBlocks/@sumointroduction/style.scss
+++ b/src/custom-components/ui/MainPageBlocks/@sumointroduction/style.scss
@@ -74,10 +74,7 @@
         height: 100%;
         transition: transform 1s ease;
         filter: opacity(0.7675);
-
-        &:hover {
-          transform: scale(1.05);
-        }
+        animation: pulsate 5s infinite;
       }
     }
 
@@ -90,5 +87,18 @@
       background: rgba(0, 0, 0, 0.3375);
       z-index: 15;
     }
+  }
+}
+
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
   }
 }
