--- a/src/custom-components/ui/MainPageBlocks/@sumozones/style.scss
+++ b/src/custom-components/ui/MainPageBlocks/@sumozones/style.scss
@@ -40,7 +40,7 @@
     .sumo-zones-card {
       display: flex;
       flex-direction: row;
-      justify-content: center;
+      justify-content: start;
       align-items: start;
       text-align: left;
       border-radius: 8px;
