--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -131,8 +131,8 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+html[data-theme="dark"] {
+  body {
+    background: #000 !important;
   }
 }
